# framepump

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: abbrev_long.bib  conf.py  index.rst  references.bib  requirements.txt
docs/_static/styles/: my_theme.css
docs/_templates/autoapi/python/: class.rst  data.rst  function.rst  method.rst  module.rst  property.rst
docs/explanation/: frame-indexing.rst  index.rst  lazy-evaluation.rst  nvenc-zero-copy.rst
docs/howto/: batch-video-writing.rst  frame-accurate-processing.rst  gpu-acceleration.rst  index.rst
docs/tutorial/: getting-started.rst  index.rst
src/framepump/: __init__.py  _core.py  _cuda_compat.py  _cuda_frames.py  _cuda_gl.py  _pyav.py  _temp_file.py  cuda_video_writer.py  encoder_config.py  npp_bindings.py  video_writing.py  video_writing_gl.py
src/framepump/nvenc/: __init__.py  bindings.py  cuda_encoder.py  encoder.py  exceptions.py  presets.py
src/framepump/nvjpeg/: __init__.py  bindings.py  decoder.py
tests/: conftest.py  fate_categories.json  test_frame_index.py  test_nvenc.py  test_smoke.py  test_stress.py  test_stress2.py  test_stress3.py  test_utils.py  test_video_frames.py  test_video_writer.py
